[package]
name = "httpie"
version = "0.1.0"
edition = "2024"
authors = ["HSn <HSn.zj@foxmail.com>"]
repository = "https://github.com/HSn0918/httpie"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0" # 错误处理
clap = { version = "3.1", features = ["derive"] } # 命令行解析
colored = "2.0" # 命令终端多彩显示
jsonxf = "1.1" # JSON pretty print 格式化
mime = "0.3" # 处理 mime 类型
reqwest = { version = "0.11", features = ["json"] } # HTTP 客户端
tokio = { version = "1.17", features = ["full"] } # 异步处理库
syntect = "4.6"
